--- a/index.html
+++ b/index.html
@@ -1,111 +1,118 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <title>Victor's Personal Site</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Victor's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/victor.jpg" alt="Victor profile picture"></td>
-      <td>
-        <h1>Victor Gallo</h1>
-        <p><em>MS Electrical and Computer Engineering Student at <a href="https://www.binghamton.edu/">Binghamton University</a></p>
-        <p><strong>Cyber Analyst at <a href="https://www2.deloitte.com/us/en.html">Deloitte</a></strong></em></p>
-        <p>
-          I graduated May 2022 with a BS in Computer Engineering. Currently, I am employed at Deloitte as a Cyber Risk
-          and Financial Advisory Analyst, and am a MS Electrical and Computer Engineering Student at Binghamton University.
-          My goal is to become a Software Engineer, and to learn about various different development techniques.
-        </p>
-      </td>
-    </tr>
-  </table>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/victor.jpg" alt="Victor profile picture"></td>
+        <td>
+          <h1>Victor Gallo</h1>
+          <p><em>MS Electrical and Computer Engineering Student at <a
+                href="https://www.binghamton.edu/">Binghamton University</a></p>
+            <p><strong>Cyber Analyst at <a
+                  href="https://www2.deloitte.com/us/en.html">Deloitte</a></strong></em></p>
+          <p>
+            I graduated May 2022 with a BS in Computer Engineering. Currently, I
+            am employed at Deloitte as a Cyber Risk
+            and Financial Advisory Analyst, and am a MS Electrical and Computer
+            Engineering Student at Binghamton University.
+            My goal is to become a Software Engineer, and to learn about various
+            different development techniques.
+          </p>
+        </td>
+      </tr>
+    </table>
 
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>BS in Computer Engineering, Binghamton University 2018-2022</li>
-    <li>MS in Electrical and Computer Engineering, Binghamton University 2022-2023</li>
-  </ul>
-  <hr>
-  <h3>Relevant Courses</h3>
-  <ol>
-    <li>Embedded System Design</li>
-    <li>Cryptography & Info Security</li>
-    <li>Fundamentals of Computer Security</li>
-    <li>Introduction to Bioenergy</li>
-    <li>Mathematical Methods in EE</li>
-    <li>Digital System Design</li>
-    <li>Digital System Design II</li>
-    <li>Fundamentals of Steganography</li>
-  </ol>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Summer 2021</td>
-        <td>Cyber Intern at Deloitte</td>
-      </tr>
-      <tr>
-        <td>Fall 2020, Fall 2021, Spring 2022</td>
-        <td>Undergraduate Class Assistant at Binghamton University</td>
-      </tr>
-    </tbody>
-  </table>
+    <hr>
+    <h3>Education</h3>
+    <ul>
+      <li>BS in Computer Engineering, Binghamton University 2018-2022</li>
+      <li>MS in Electrical and Computer Engineering, Binghamton University
+        2022-2023</li>
+    </ul>
+    <hr>
+    <h3>Relevant Courses</h3>
+    <ol>
+      <li>Embedded System Design</li>
+      <li>Cryptography & Info Security</li>
+      <li>Fundamentals of Computer Security</li>
+      <li>Introduction to Bioenergy</li>
+      <li>Mathematical Methods in EE</li>
+      <li>Digital System Design</li>
+      <li>Digital System Design II</li>
+      <li>Fundamentals of Steganography</li>
+    </ol>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Summer 2021</td>
+          <td>Cyber Intern at Deloitte</td>
+        </tr>
+        <tr>
+          <td>Fall 2020, Fall 2021, Spring 2022</td>
+          <td>Undergraduate Class Assistant at Binghamton University</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <hr>
-  <h3>Skills</h3>
+    <hr>
+    <h3>Skills</h3>
 
-  <table cellspacing="10">
-    <tbody>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>MATLAB</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>AWS</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Python</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>C</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>C++</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Verilog</td>
-        <td>⭐⭐</td>
-      </tr>
-    </tbody>
-  </table>
+    <table cellspacing="10">
+      <tbody>
+        <tr>
+          <td>HTML</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>MATLAB</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>AWS</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Python</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>C</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>C++</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Verilog</td>
+          <td>⭐⭐</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
-</body>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 
 </html>
