Add circular border for profile pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/victor.jpg" alt="Victor profile picture"></td>
+        <td><img id="my-image" src="images/victor.jpg" alt="Victor profile picture"></td>
         <td>
           <h1>Victor Gallo</h1>
           <p><em>MS Electrical and Computer Engineering Student at <a
