Add icon and fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <title>Victor's Website</title>
 
-    <link rel="stylesheet" href="CSS - My Site/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="my-icon.ico">
   </head>
   <body>
 
