--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -13,6 +10,19 @@
     <link rel="icon" href="my-icon.ico">
   </head>
   <body>
+  <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Victor.</h1>
+    <p>a <span class="pro">pro</span>grammer.</p>
+    <img src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
 
+  </div>
+  <div class="bottom-container">
+    
+  </div>
+  
   </body>
 </html>
