--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Victor.</h1>
-    <p>a <span class="pro">pro</span>grammer.</p>
+    <h2>a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="" alt="">
+      <img id="my-image" src="images/Victor-img.jfif" alt="Victor-img">
       <h2>Hello.</h2>
-      <p>I am a Cyber Analyst at Deloitte and MS Electrical and 
-      Computer Engineering Student at Binghamton University. I like to learn, program,
-      and create new projects!</p>
+      <p class="intro">I am a Cyber Analyst at <a href="https://www2.deloitte.com/us/en.html">Deloitte</a> 
+      and MS Electrical and Computer Engineering Student at 
+      <a href="https://www.binghamton.edu/">Binghamton University</a>. 
+      I like to learn, program, and create new projects!</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="images/diff-language-gif.gif" alt="different-programming-languages-gif">
+        <img class="programming-img" src="images/diff-language-gif.gif" alt="different-programming-languages-gif">
         <h3>Programming</h3>
         <p>I have a lot of experience with programming. I have used many different 
         languages to create a bunch of different projects. These projects range 
@@ -42,8 +43,8 @@
         I do dabble in others such as HTML, CSS, SQL, R, and bash too!</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/computer-img.png" alt="computer-img">
-        <h3>Problem</h3>
+        <img class="computer-img" src="images/computer-img.png" alt="computer-img">
+        <h3>Problem Solving</h3>
         <p>But my best skill is problem solving. If it wasn't for my intuitve and curious
         thinking, then I wouldn't have made or finished any of my projects. My degrees in
         engineering helped me build my problem solving skills!</p>
@@ -52,8 +53,8 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you think I would be a great fit for a job!</h3>
-      <p>Shoot me an email, or DM me on LinkedIn! (P.S. you should check out my GitHub page.)</p>
+      <h3 class="bottom-header">If you think I would be a great fit for a job!</h3>
+      <p class="contact-message">Shoot me an email, or DM me on LinkedIn! (P.S. you should check out my GitHub page.)</p>
       <a class="btn" href="mailto:vgallo921@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -62,7 +63,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/victor-gallo-645748185/">LinkedIn</a>
     <a class="footer-link" href="https://github.com/v-gallo">GitHub</a>
-    <p>© Victor Gallo.</p>
+    <p class="copyright">© 2022 Victor Gallo.</p>
   </div>
   
     
