--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/victor-gallo-645748185/">LinkedIn</a>
     <a class="footer-link" href="https://github.com/v-gallo">GitHub</a>
-    <p class="copyright">© 2022 Victor Gallo.</p>
+    <p class="copyright">| © 2022 Victor Gallo |</p>
   </div>
   
     
